--- a/gb/21/10/18/n13311345.md
+++ b/gb/21/10/18/n13311345.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cqgugh3693/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cqgugh3693/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cqgugh3693/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cqgugh3693/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cqgugh3693/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13318912-66103106fc98e093c167928687333af5-600x400.jpg" />
 <h6>朱媛珠在打坐，这是法轮功第五套功法。 （新唐人电视台）
 </h6>
 <hr>
-<p><ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>是一位缙云县的奇女子，她曾姿容秀美，明眸皓齿，冰心玉洁，超凡脱俗。1999年7月20日，中共开始镇压迫害<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，她因修炼法轮大法，被关进了杭州女子监狱，在遭受了长达七年各种酷刑迫害后，她整个人面目皆非，中共虽然摧毁了她的容颜，但是却无法撼动她坚定修炼大法的信念。请让我们跟随《<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣和姜光宇去聆听缙云女子<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>的人生传奇吧。</p>
-<figure id="attachment_13320469" aria-describedby="caption-attachment-13320469" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13320469-e527f9fc93741b9604c30ef15ad0d730.jpg"><img class=" wp-image-13320469" src="https://i.epochtimes.com/assets/uploads/2021/10/id13320469-e527f9fc93741b9604c30ef15ad0d730-450x253.jpg" alt="" width="601" b="338" /></a><figcaption id="caption-attachment-13320469" class="wp-caption-text">《<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人，宇欣与姜光宇。（新唐人电视台）</figcaption></figure>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>是一位缙云县的奇女子，她曾姿容秀美，明眸皓齿，冰心玉洁，超凡脱俗。1999年7月20日，中共开始镇压迫害<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，她因修炼法轮大法，被关进了杭州女子监狱，在遭受了长达七年各种酷刑迫害后，她整个人面目皆非，中共虽然摧毁了她的容颜，但是却无法撼动她坚定修炼大法的信念。请让我们跟随《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣和姜光宇去聆听缙云女子<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>的人生传奇吧。</p>
+<figure id="attachment_13320469" aria-describedby="caption-attachment-13320469" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13320469-e527f9fc93741b9604c30ef15ad0d730.jpg"><img class=" wp-image-13320469" src="https://i.epochtimes.com/assets/uploads/2021/10/id13320469-e527f9fc93741b9604c30ef15ad0d730-450x253.jpg" alt="" width="601" b="338" /></a><figcaption id="caption-attachment-13320469" class="wp-caption-text">《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人，宇欣与姜光宇。（新唐人电视台）</figcaption></figure>
 <h2><span style="color: #008000;">缙云山水美如仙境??缙云女子美若天仙</span></h2>
 <p>主持人宇欣：“观众朋友大家好！欢迎您继续收看法轮大法神奇故事节目。光宇，你知道浙江丽水缙云这个地方吗？”</p>
 <p>主持人姜光宇：“知道啊！咱们中华民族的人文初祖轩辕黄帝啊，他得道升仙的地方就在这儿，而且这个皇帝他又名叫缙云氏，缙云县的名字就这么来的。”</p>
@@ -26,7 +26,7 @@
 <p>主持人姜光宇：“哎呀！说来也是很心痛啊！七年的迫害之后啊，她简直整个人就面目全非了！跟以前是判若两人。”</p>
 <p>主持人宇欣：“哇！那这样的消息让人听了难过。”</p>
 <p>主持人姜光宇：“是，没错。”</p>
-<p><strong><ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员朱媛珠</strong>：“我修炼法轮功已经有十七年了，但遗憾的是，七年的时间我是在杭州女子监狱被残酷的迫害中度过的。因为大家也知道，中共为了迫害法轮功，使用了各种手段，制造各种谎言嫁祸给法轮功。在这七年里，我受尽了各种残酷的折磨，你看我现在的形象，以前认识我的人，看到我都会哭。朱媛珠，你怎么变成这个样子了？</p>
+<p><strong><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员朱媛珠</strong>：“我修炼法轮功已经有十七年了，但遗憾的是，七年的时间我是在杭州女子监狱被残酷的迫害中度过的。因为大家也知道，中共为了迫害法轮功，使用了各种手段，制造各种谎言嫁祸给法轮功。在这七年里，我受尽了各种残酷的折磨，你看我现在的形象，以前认识我的人，看到我都会哭。朱媛珠，你怎么变成这个样子了？</p>
 <p>“但我以前的形象还是挺好的，因为我十六岁的时候就进剧团，我是唱婺剧唱文生的，导演就看中我的形象，说我牙齿又好，形象又好，就选中了我，其实我那时候我没有基本功，他就是看中我形象好，就把我选进去了。我一进去就演主角，演文生，我们那边的人应该都知道我，我还是有点小名气的，说我演得非常出色。</p>
 <p>“七年的时间，出来以后呢，整个人都变了，就是你看到的我现在这个形象，牙齿全部都脱落，因为当时中共为了转化我，叫我放弃法轮功，就给我灌不明药物，而且警官当时还说要给我打针，他说给你打一针的话，你前面的记忆全部给你抹掉，你就没有记忆，他说还要给我送到杭州七院，七院就是神经病医院，他要给我送进医院，就是说还又给我灌了不明药物，灌了以后呢，就使我这个牙龈全部化脓，化脓以后呢，牙齿松动、牙龈萎缩，就这样变成现在这个样子，而且我的脸整个都变形。</p>
 <p>“很多人不理解，说你被残酷迫害这么多年，为什么还这么坚定修法轮功？他们都很不解，那我就跟他讲，因为我炼法轮功，我受益于法轮功，法轮功对我受益太大了，我身心都得到健康。”</p>
@@ -50,54 +50,54 @@
 <p>他说：‘那我相信，今天我看到你，我自己见证我相信了。我是基督教已经几十年了，我家族都是基督徒，我根本做不到像你这样的境界呀！老板娘，不是我做不到，我相信任何一个教，不管是佛教也好，道教也好，任何一个教都做不到这个境界。现在这个社会，不要说真的是撞的这个样子了，哪怕是一点点碰到的话就赖他一把了。你撞成这个样子，还不要他一分钱，我真的服了你们法轮功了。’</p>
 <p>“这个过程中，他就把我拉到家了。拉到家以后呢，我就叫我先生帮我先洗头，因为那个工地上旁边都是泥沙，整个头发都是泥沙，没法看，又血淋淋的。我叫我先生把我的头先洗一洗，那也不能坐下，只能站在那里。</p>
 <p>我先生说：‘不能洗头！你这个破伤风针也没打，如果洗了头的话，会感染的，你这个到时伤疤会感染非常严重。不能洗头！’</p>
-<p>我说：‘不洗头怎么过啊？整个头上都是泥沙这个样子，这肯定不行的，你帮我洗头吧！一定要帮我洗！’”◇（待续）</p>
-<p>（点阅<ahref="https://github.com/cqgugh3693/djy/blob/master/gb/tag/%e8%a6%8b%e8%ad%89%e5%a4%a7%e6%b3%95%e7%9a%84%e7%a5%9e%e5%a5%87.md#1">【见证大法的神奇】</a>系列文章。）</p>
+<p>我说：‘不洗头怎么过啊？整个头上都是泥沙这个样子，这肯定不行的，你帮我洗头吧！一定要帮我洗！’”◇<ahref=><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311349.md#1" rel="noopener" target="_blank">接下文</a>）</p>
+<p>（点阅<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e8%a6%8b%e8%ad%89%e5%a4%a7%e6%b3%95%e7%9a%84%e7%a5%9e%e5%a5%87.md#1">【见证大法的神奇】</a>系列文章。）</p>
 <p>责任编辑：李梅</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/4/n13279871.md#1">见证大法的神奇──李旻与刘庆的故事〈下〉</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/4/n13279344.md#1">见证大法的神奇──李旻与刘庆的故事〈上〉</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/7/25/n13113111.md#1">见证大法的神奇 第三集（下）</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/7/25/n13113105.md#1">见证大法的神奇 第三集（上）</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/6/27/n13049948.md#1">见证大法的神奇 第二集（下）</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/6/27/n13049947.md#1">见证大法的神奇 第二集（上）</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/6/5/n13001372.md#1">见证大法的神奇 第一集（下）</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/6/5/n13001368.md#1">见证大法的神奇 第一集（上）</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/5/6/n12928140.md#1">走出生命迷宫   证实大法美好——来自德国埃娃玛丽的故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/1/n13474190.md#1">一位总参办少校参谋的故事（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/1/n13474185.md#1">一位总参办少校参谋的故事（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/30/n13468191.md#1">从高傲到谦卑 台湾精神科医师的修炼故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311349.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈下〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/4/n13279871.md#1">见证大法的神奇──李旻与刘庆的故事〈下〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/4/n13279344.md#1">见证大法的神奇──李旻与刘庆的故事〈上〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/25/n13113111.md#1">见证大法的神奇 第三集（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/25/n13113105.md#1">见证大法的神奇 第三集（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/27/n13049948.md#1">见证大法的神奇 第二集（下）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/19/n10862316.md#1" target="_blank">刘晓：祠堂被毁 不孝子孙愧对先祖</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000755.md#1" target="_blank">文革处决纪录：非战争下的中国之最</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/19/n13315848.md#1">【古韵流芳】孝贤纯皇后 乾隆追思五十年</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/21/n13321059.md#1">【百年真相】刑场上的婚礼 是杜撰还是历史？</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/18/n13313495.md#1">【百年真相】从建党到弃党 陈独秀的沉浮人生</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/21/n13320995.md#1">【未解之谜】托梦破奇案 震惊英国</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/17/n13310077.md#1">【人生之钥】他选了风水吉地 为何最后还是大破大败？</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/25/n13329384.md#1">【秦鹏直播】与中共开战？澳防长：让对方回答</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/26/n13329702.md#1">【珍言真语】练乙铮：对华投资须考虑两因素</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/25/n13329323.md#1">【远见快评】习纪念入联讲4要点 美点中共软肋</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/22/n13321451.md#1">物价飞涨 在Costco买12种食品和用品最便宜</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/23/n13325128.md#1">【新闻看点】房产税试点出台 传神秘人抛93套房</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/24/n13325533.md#1">【财商天下】中共缺钱发美元债 华尔街飞蛾扑火</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/24/n13326970.md#1">与李云迪吴亦凡合照疯传 黄晓明遭网民调侃</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/24/n13326596.md#1">来台首遇6.5级强震 杜汶泽叹香港更可怕</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/24/n13326714.md#1">家中单月电费逾13万元 女星马羚呛国家电网</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/24/n13324863.md#1">《致命钥匙》第二季影评：新的魔法钥匙 再添新看点！</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/25/n13329125.md#1">高圆圆肖像权案胜诉 其本名意外曝光</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/23/n13324327.md#1">间歇性断食至少5大好处 断食成功2重点</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/24/n13325525.md#1">上吨重巨大翻车鱼被捕获 磅秤破表无法量测</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/23/n13323718.md#1">【健康1+1】一类人自然免疫力竟然这么高？</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/24/n13325668.md#1">专家：餐厅加入饮料中的冰块 可能让你生病</a></li>
-<li><a href="https://github.com/cqgugh3693/djy/blob/master/gb/21/10/25/n13327896.md#1">持枪男子抢商店 被前美军陆战队员秒收拾</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616642.md#1">【新闻大家谈】“取胜三关键”俄乌各占几成？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cqgugh3693/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cqgugh3693/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13311345.htm">见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13311345.htm">见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cqgugh3693/djy/blob/master/gb/21/10/18/n13311345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cqgugh3693/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cqgugh3693/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cqgugh3693/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqgugh3693/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311345.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
